# project3-uv

./: README.md  pyproject.toml
examples/: setup.sh  uv_demo.py
src/uv_learning/: __init__.py  main.py
tests/: __init__.py  test_main.py
